[gd_scene load_steps=14 format=2]

[ext_resource path="res://fuente/MEGAMAN10.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://mainmenu.gd" type="Script" id=2]
[ext_resource path="res://TransitionScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://musica/tud (1).wav" type="AudioStream" id=4]
[ext_resource path="res://musica/topo_kimyou_na_bouken.wav" type="AudioStream" id=5]
[ext_resource path="res://musica/mioTopoKym.wav" type="AudioStream" id=6]
[ext_resource path="res://musica/Topo_kimyou_na_bouken_Pawny.wav" type="AudioStream" id=7]
[ext_resource path="res://musica/diegoTopoKym.wav" type="AudioStream" id=8]
[ext_resource path="res://musica/volknerTopoKym.wav" type="AudioStream" id=9]
[ext_resource path="res://musica/tirin_short.wav" type="AudioStream" id=10]
[ext_resource path="res://musica/30 Open Your Heart - Main Theme of ''Sonic Adventure'' -.mp3" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 160
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="mainmenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0.0117647, 0.286275, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 25.0
margin_top = 160.0
margin_right = 1255.0
margin_bottom = 559.0
custom_constants/separation = 24

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 1230.0
margin_bottom = 217.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 1230.0
margin_bottom = 217.0
rect_clip_content = true
custom_fonts/font = SubResource( 1 )
text = "Topo's
Bizarre Adventure"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 241.0
margin_right = 1230.0
margin_bottom = 308.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 472.0
margin_right = 758.0
margin_bottom = 67.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 286.0
margin_bottom = 67.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 286.0
margin_bottom = 67.0
custom_constants/separation = 10

[node name="selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 67.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="start" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 286.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 332.0
margin_right = 1230.0
margin_bottom = 399.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 472.0
margin_right = 758.0
margin_bottom = 67.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer"]
margin_right = 286.0
margin_bottom = 67.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer"]
margin_right = 286.0
margin_bottom = 67.0
custom_constants/separation = 10

[node name="selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 67.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="exit" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 286.0
margin_bottom = 67.0
rect_min_size = Vector2( 226, 0 )
custom_fonts/font = SubResource( 2 )
text = "Exit"

[node name="TransitionScreen" parent="." instance=ExtResource( 3 )]

[node name="SelectionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SelectAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Title_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Title_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Title_3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Title_4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Title_5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
